--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,20 @@
     <string name="app_name">Matric Inter MCQS</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="class_9_books">
+        <item>Physics</item>
+    </string-array>
+
+    <integer-array name="class_9_books_icons">
+        <item>@drawable/ico_physics</item>
+    </integer-array>
+
+    <string-array name="class_10_books">
+        <item>Chemistry</item>
+    </string-array>
+
+    <integer-array name="class_10_books_icons">
+        <item>@drawable/ico_physics</item>
+    </integer-array>
 </resources>
