--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
 
     <integer-array name="class_9_books_icons">
         <item>@drawable/ico_physics</item>
+        <item>@drawable/ico_chemistry</item>
     </integer-array>
 
     <string-array name="class_10_books">
