--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,8 +12,7 @@
         <item>@drawable/ico_chemistry</item>
     </integer-array>
 
-    <string-array name="class_10_books">
-    </string-array>
+    <string-array name="class_10_books"></string-array>
 
     <integer-array name="class_10_books_icons">
         <item>@drawable/ico_physics</item>
