class 9th phy, chem and bio complete added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,13 @@
     <string-array name="class_9_books">
         <item>Physics</item>
         <item>Chemistry</item>
+        <item>Biology</item>
     </string-array>
 
     <integer-array name="class_9_books_icons">
         <item>@drawable/ico_physics</item>
         <item>@drawable/ico_chemistry</item>
+        <item>@drawable/ico_biology</item>
     </integer-array>
 
     <string-array name="class_10_books"></string-array>
